# bankruptcy_prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: best_params.csv  final_important_features.csv  highcorr90.csv  important_features.csv  testing_data.csv
model/: catboost_model
notebook/: exploration.ipynb  model.ipynb  oversampling_model.ipynb
utils/: __init__.py  utils.py
